force-app/main/default/objects/Allotment__c/fields/Allotment_Date__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Date__c</fullName>
    <label>Allotment Date</label>
    <type>Date</type>
</CustomField>