force-app/main/default/objects/Allotment__c/fields/Allotment_ID__c.field-meta.xml
<CustomField>
    <fullName>Allotment_ID__c</fullName>
    <displayFormat>AL={000000000}</displayFormat>
    <label>Allotment ID</label>
    <type>AutoNumber</type>
</CustomField>