force-app/main/default/objects/Allotment__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <label>Citizen</label>
    <referenceTo>Citizen__c</referenceTo>
    <relationshipLabel>Allotment</relationshipLabel>
    <relationshipName>Allotment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>