force-app/main/default/objects/Allotment__c/fields/Land_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Land_Parcel__c</fullName>
    <label>Land Parcel</label>
    <referenceTo>Land_Parcel_c__c</referenceTo>
    <relationshipLabel>Allotment</relationshipLabel>
    <relationshipName>Allotment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>