force-app/main/default/objects/Allotment__c/fields/Renewal_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Eligible</label>
    <type>Checkbox</type>
</CustomField>